Add GitHub Actions workflow for automatic worker deployment
Deploys to Cloudflare Workers on push to main when worker/ files change.
Also fix DO migration to use new_sqlite_classes (required for free plan).

--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -8,4 +8,4 @@ bindings = [{ name = "BINGO_ROOM", class_name = "BingoRoom" }]
 
 [[migrations]]
 tag = "v1"
-new_classes = ["BingoRoom"]
+new_sqlite_classes = ["BingoRoom"]
