Add type-checking to CI/CD workflows and update docs
- Run make fmt before deploying to production
- Add PR check workflow that runs make fmt before merge
- Update CLAUDE.md with CI/CD section documenting both workflows
- Update README.md Development section with make fmt command
- Ensures TypeScript type errors are caught before deployment and merge

--- a/.github/workflows/deploy-worker.yml
+++ b/.github/workflows/deploy-worker.yml
@@ -16,6 +16,8 @@ jobs:
           node-version: 22
       - run: npm ci
         working-directory: worker
+      - name: Type-check before deploy
+        run: make fmt
       - run: npx wrangler deploy
         working-directory: worker
         env:
