--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -11,6 +11,16 @@ tag = "v1"
 new_sqlite_classes = ["BingoRoom"]
 
 [observability]
+enabled = false
+head_sampling_rate = 1
+
 [observability.logs]
 enabled = true
+head_sampling_rate = 1
+persist = true
 invocation_logs = true
+
+[observability.traces]
+enabled = false
+persist = true
+head_sampling_rate = 1
