Fix slow joining and unresponsive start button in online mode
- Don't block WebSocket 101 response on saveRoom (fire-and-forget)
- Queue client messages during reconnect and flush on reopen
- Send error feedback for all silent server-side rejections
- Show reconnecting banner when WebSocket drops
- Reduce reconnect delay from 2s to 1s
- Handle room-not-found on WebSocket upgrade
- Enable observability in wrangler.toml
- Add server-side logging for key room events

--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -11,7 +11,7 @@ tag = "v1"
 new_sqlite_classes = ["BingoRoom"]
 
 [observability]
-enabled = false
+enabled = true
 head_sampling_rate = 1
 
 [observability.logs]
