Modularize worker and add comprehensive tests
Extract types, utilities, and game logic from the monolithic room.ts
into separate modules (types.ts, utils.ts, game.ts) for testability.
Add Vitest with @cloudflare/vitest-pool-workers: unit tests for
utilities and game logic, integration tests for the full Durable Object
lifecycle via WebSocket. Add test target to Makefile and CI.

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -16,3 +16,5 @@ jobs:
         working-directory: worker
       - name: Type-check
         run: make fmt
+      - name: Tests
+        run: make test
