Modularize frontend into Vite + TypeScript monorepo
Replace monolithic index.html + audio.js with a modular codebase:
- Add shared/ package for game data, types, and logic (buildGamePool,
  generateBoard, checkWin) used by both client and worker
- Add client/ package with Vite build, 18 TypeScript modules, 6 CSS
  files, and 33 unit tests (jsdom)
- Unify game pool sizing via BOARD_SIZE + EXTRA_POOL_CHARS constants
  so all modes use consistent extras (vowels mode now uses all 31)
- Update worker to import shared logic, remove duplicated code
- Add CI workflows: PR check (fmt + test + build), deploy client to
  GitHub Pages via Actions, deploy worker on shared/** changes
- Update Makefile for workspace-level install, type-check, and test

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -13,8 +13,9 @@ jobs:
         with:
           node-version: 22
       - run: npm ci
-        working-directory: worker
       - name: Type-check
         run: make fmt
       - name: Tests
         run: make test
+      - name: Build client
+        run: make build
