--- a/.github/workflows/deploy-worker.yml
+++ b/.github/workflows/deploy-worker.yml
@@ -3,7 +3,7 @@ name: Deploy Worker
 on:
   push:
     branches: [main]
-    paths: [worker/**]
+    paths: [worker/**, shared/**]
   workflow_dispatch:
 
 jobs:
@@ -15,7 +15,6 @@ jobs:
         with:
           node-version: 22
       - run: npm ci
-        working-directory: worker
       - name: Type-check before deploy
         run: make fmt
       - run: npx wrangler deploy
