--- a/worker/package.json
+++ b/worker/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "thai-bingo-api",
+  "name": "@thai-bingo/worker",
   "private": true,
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
     "test": "vitest run"
+  },
+  "dependencies": {
+    "@thai-bingo/shared": "*"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.12.10",
