Add version injection (0.1.x) and consolidate CI/CD into single workflow
Derive APP_VERSION from git tags at deploy time (defaults to "dev" locally).
Client shows version in console log, meta tag, and subtle footer. Worker
returns X-App-Version header and GET /api/version endpoint. Consolidated
deploy-client + deploy-worker into ci.yml that sequences check → auto-tag
→ path-filtered deploys, eliminating race conditions.

--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -10,6 +10,9 @@ bindings = [{ name = "BINGO_ROOM", class_name = "BingoRoom" }]
 tag = "v1"
 new_sqlite_classes = ["BingoRoom"]
 
+[define]
+__APP_VERSION__ = "'dev'"
+
 [observability]
 enabled = true
 head_sampling_rate = 1
