--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,8 +95,7 @@ jobs:
         env:
           APP_VERSION: ${{ needs.version.outputs.version }}
       - name: Deploy to Cloudflare Pages
-        working-directory: client
-        run: npx wrangler pages deploy dist --project-name=thai-bingo --branch main
+        run: npx wrangler pages deploy client/dist --project-name=thai-bingo --branch main
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
 
